Tests/Resources/Bad/ERROR_OCCURS_CHECK_INFINITE_TYPE/simple_auto_apply_auto.st
language core;
extend with #type-reconstruction, #multiparameter-functions;

fn main(f : auto) -> auto {
    return f(f)
}